cmake_minimum_required(VERSION 3.23)
project(A2_Search_Problem)

set(CMAKE_CXX_STANDARD 14)

add_executable(A2_Search_Problem main.cpp BinarySearch.cpp BST.cpp util.h moveZeroes.cpp removeElement.cpp removeDuplicates.cpp sortColors.cpp merge.cpp findKthLargest.cpp twoSum_2.cpp minSubArrayLen.cpp lengthOfLongestSubstring.cpp findAnagrams.cpp)
